fix: vertical layout
Everything was getting squashed at the top, need to make #__next fill
all the available vertical space and can then make the main section grow
to fill it.

--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -3,9 +3,10 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	padding: 6rem 2rem;
+	padding: 2rem;
 	max-width: 800px;
 	margin: 0 auto;
+	flex: 1;
 }
 
 .title {
